feat: add parameter to limit record count