@@ -10,6 +10,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.function.Function;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 public class CsvUtils {
 
@@ -26,19 +27,28 @@ public class CsvUtils {
     }
 
     public static List<Ticket> parseTickets(
-            String directory, City city, Map<String, Infraction> infractions) throws IOException {
+            String directory, City city, Map<String, Infraction> infractions, Long recordCount) throws IOException {
 
         String file = directory + '/' + city.getTicketsFile();
 
-        return Files.readAllLines(Path.of(file)).stream()
-                .skip(1)
+        List<String> lines;
+
+        try (Stream<String> stream = Files.lines(Path.of(file))) {
+            if (recordCount != null) {
+                lines = stream.skip(1).limit(recordCount).collect(Collectors.toList());
+            } else {
+                lines = stream.skip(1).collect(Collectors.toList());
+            }
+        }
+
+        return lines.stream()
                 .map(line -> line.split(";"))
                 .map(
                         values ->
                                 city.parseTicket(
                                         values,
                                         infractions.get(values[city.getInfractionCodeIndex()])))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public static <T> void writeCsv(String path, String[] headers, List<T> data, Function<T, String> toRow) throws IOException {
